# Saturn-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md  Sparky.sln  WindowsGenProjects.bat  premake5  premake5.lua  sonar-project.properties
Game/: premake5.lua
Saturn/: CMakeLists.txt
Saturn/src/: Saturn.h  Sparky.h  sppch.h
Saturn/src/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDShadowFBO.cpp  OpenGLDShadowFBO.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderUniform.cpp  OpenGLShaderUniform.h  OpenGLShadowFBO.cpp  OpenGLShadowFBO.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Saturn/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Saturn/src/Saturn/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtons.h  Window.h
Saturn/src/Saturn/Asset/: Asset.h  AssetImporter.cpp  AssetImporter.h  AssetImporterBase.cpp  AssetImporterBase.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegistryBase.cpp  AssetRegistryBase.h  EditorAssetRegistry.cpp  EditorAssetRegistry.h  MaterialAsset.cpp  MaterialAsset.h  PhysicsMaterialAsset.cpp  PhysicsMaterialAsset.h  Prefab.cpp  Prefab.h  TextureSource.cpp  TextureSourceAsset.cpp  TextureSourceAsset.h  VFSAssetImporter.cpp  VFSAssetImporter.h
Saturn/src/Saturn/Audio/: AudioCore.h  AudioSystem.cpp  AudioSystem.h  GraphSound.cpp  GraphSound.h  MiniAudioEngineBuild.cpp  Sound.cpp  Sound.h  Sound2D.cpp  Sound2D.h  SoundBase.h  SoundGroup.cpp  SoundGroup.h  SoundMixerAsset.cpp  SoundMixerAsset.h  SoundSpecification.h  SparkyAudio.cpp  SparkyAudio.h  alhelpers.cpp  alhelpers.h
Saturn/src/Saturn/Core/: App.cpp  App.h  AppData.cpp  AppData.h  Asserts.h  Base.cpp  Base.h  Buffer.h  Class.h  EngineSettings.h  EnvironmentVariables.cpp  EnvironmentVariables.h  ErrorDialog.h  Events.h  FileSystemHelpers.h  IO.cpp  IO.h  Input.cpp  Input.h  Job.h  JobSystem.cpp  JobSystem.h  Key.h  Layer.cpp  Layer.h  Library.cpp  Library.h  Log.cpp  Log.h  Math.cpp  Math.h  MemoryStream.h  Module.cpp  Module.h  MouseButton.h  OptickProfiler.h  PlatformDetection.h  Process.cpp  Process.h  Random.cpp  (+25 more)
Saturn/src/Saturn/Debug/: DeadBeef.h  Instrumentor.h  memoryexttest.h
Saturn/src/Saturn/Discord/: DiscordRPC.cpp  DiscordRPC.h
Titan/: CMakeLists.txt  imgui.ini
Titan/assets/: all_collider_tests.sc  callback_testing.sc  gametesting.sc  physic_scene.sc  physx_test_scece.sc  sponza.sc  sponza_new.sc  test.cs  test.sc  untitled.sc
Titan/assets/SandboxProject/: EngineSettings.eng  callback_testing.sc  test.sc  test_new_entt.sc  testtemp.sc
Titan/assets/Templates/: %PROJECT_NAME%.Build.cs  %PROJECT_NAME%.RT_Build.cs  %PROJECT_NAME%Main.cpp  __main.cpp  entity_code.cpp  entity_code.h  premake5.lua
Titan/assets/meshes/: MainTestWMats.mtl  Monke-Textures.fbx  NewSceneTest.fbx  Sphere1m.fbx  Suzanne.fbx  TestScene.fbx  newcube.fbx  test.fbx  untitled.fbx  wooden.fbx
Titan/assets/models/: Plane1m.fbx  Sphere1m.fbx
Titan/assets/scenes/: Test3.scene  basic.scene  basic_test.scene  shadow_issue.scene  sponza.scene
Titan/assets/shaders/: AO-Composite.glsl  Collider.glsl  Grid.glsl  LightCulling.glsl  Outline.glsl  PBR_Anim.glsl  PBR_Static.glsl  PreDepth.glsl  SSAO.glsl  SceneComposite.glsl  ShaderBasic.glsl  Shadow-Depth.glsl  ShadowMap.glsl  Skybox.glsl  Skybox_Compute.glsl  TexturePass.glsl  shader.frag  shader.vert  shader_new.glsl
Titan/content/: EngineSettings.eng
Titan/content/Templates/: %PROJECT_NAME%.Build.cs  %PROJECT_NAME%Main.cpp  entity_code.cpp  entity_code.h
Titan/content/meshes/: TestScene.fbx  TransformTest.fbx  vikingroom.fbx
Titan/content/scenes/: sponza.scene
Titan/content/shaders/: LightCulling.glsl  SSAO-Blur.glsl
Titan/src/: App.cpp  AssetPanel.cpp  AssetPanel.h  EditorLayer.cpp  EditorLayer.h  Titan.cpp  main.cpp
Titan/src/AssetGUI/: MeshViewer.cpp  MeshViewer.h  ScriptViewer.cpp  ScriptViewer.h  TextureViewer.cpp  TextureViewer.h
(+843 files in other folders)
